--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -67,19 +67,19 @@ jobs:
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
       run: terraform init
-      working-directory: ./plan-artifact/iac
+      working-directory: ./iac
     # On push to master, build or change infrastructure according to Terraform configuration files
     # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
     - name: Terraform Apply
       if: github.ref == 'refs/heads/main' && github.event_name == 'push'
       run: terraform apply -auto-approve
-      working-directory: ./plan-artifact/iac
+      working-directory: ./iac
     # Publish artifact
     - name: Publish artifact
       uses: actions/upload-artifact@v2
       with:
         name: apply-artifact
-        path: './plan-artifact/iac'
+        path: './'
 
   terraform-destroy:
     name: 'Terraform Destroy'
@@ -98,6 +98,8 @@ jobs:
       with:
         name: apply-artifact
         path: './'
+    - name: Display structure of downloaded files
+      run: ls -R
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
       run: terraform init
@@ -107,5 +109,5 @@ jobs:
     - name: Terraform Destroy
       if: github.ref == 'refs/heads/main' && github.event_name == 'push'
       run: terraform destroy -auto-approve
-      working-directory: ./apply-artifact
+      working-directory: ./iac
     
