--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -62,7 +62,7 @@ jobs:
         path: '.'
     
     - name: Display structure of downloaded files
-      run: ls -R
+      run: ls -Rlah
 
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
@@ -98,8 +98,10 @@ jobs:
       with:
         name: apply-artifact
         path: './'
+    
     - name: Display structure of downloaded files
-      run: ls -R
+      run: ls -Rlah
+
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
       run: terraform init
