--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -62,7 +62,7 @@ jobs:
         path: '.'
     
     - name: chmod777
-      run: chmod 777 .iac/ -R
+      run: chmod 777 ./iac -R
 
     - name: Display structure of downloaded files
       run: ls -Rlah
