--- a/.github/workflows/setup-s3-bucket-tfstate.yml
+++ b/.github/workflows/setup-s3-bucket-tfstate.yml
@@ -12,15 +12,7 @@ env:
 on:
   workflow_dispatch:
     # Inputs the workflow accepts.
-    inputs:
-      name:
-        # Friendly description to be shown in the UI instead of 'name'
-        description: 'Person to greet'
-        # Default value if no value is explicitly provided
-        default: 'World'
-        # Input has to be provided for the workflow to run
-        required: true
-
+    inputs: {}
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "greet"
@@ -37,23 +29,20 @@ jobs:
         AWS_DEFAULT_REGION: us-east-1
       with:
         entrypoint: ""
+        pre-entrypoint: ""
         args: | 
-          
           BUCKET_NAME="tfstates-$GITHUB_ACTION"
           echo "CREATE BUCKET $BUCKET_NAME"
-          
           aws s3api create-bucket --bucket $BUCKET_NAME  \
             --region $AWS_DEFAULT_REGION \
             --acl private \
             --object-lock-enabled-for-bucket \
             --output yaml
-          
           aws s3api put-bucket-tagging \
             --bucket $BUCKET_NAME  \
             --region $AWS_DEFAULT_REGION \
             --tagging "TagSet=[{Key=Name,Value=$BUCKET_NAME}]" \
             --output yaml
-              
           aws s3api put-bucket-versioning \
             --bucket $BUCKET_NAME  \
             --region $AWS_DEFAULT_REGION \
@@ -63,8 +52,6 @@ jobs:
             --bucket $BUCKET_NAME  \
             --region $AWS_DEFAULT_REGION \
             --server-side-encryption-configuration '{"Rules": [{"ApplyServerSideEncryptionByDefault": {"SSEAlgorithm": "AES256"}}]}' \
-            --output yaml
-
-          
+            --output yaml         
           
 
