--- a/.github/workflows/setup-s3-bucket-tfstate.yml
+++ b/.github/workflows/setup-s3-bucket-tfstate.yml
@@ -28,8 +28,8 @@ jobs:
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_DEFAULT_REGION: us-east-1
       with:
-        entrypoint: "sh -c"
-        pre-entrypoint: "sh -c"
+        entrypoint: "/usr/bin/sh -c"
+        pre-entrypoint: "/usr/bin/sh -c"
         args: | 
           BUCKET_NAME="tfstates-$GITHUB_ACTION"
           echo "CREATE BUCKET $BUCKET_NAME"
