--- a/.github/workflows/setup-s3-bucket-tfstate.yml
+++ b/.github/workflows/setup-s3-bucket-tfstate.yml
@@ -28,26 +28,26 @@ jobs:
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         AWS_DEFAULT_REGION: us-east-1
       with:
-        entrypoint: "/bin/sh"
-        #pre-entrypoint: "/bin/sh"
+        entrypoint: "/bin/sh -c"
+        #pre-entrypoint: "/bin/sh -c"
         args: | 
-          BUCKET_NAME="tfstates-$GITHUB_ACTION"
-          echo "CREATE BUCKET $BUCKET_NAME"
+          BUCKET_NAME="tfstates-$GITHUB_ACTION" &&
+          echo "CREATE BUCKET $BUCKET_NAME" &&
           aws s3api create-bucket --bucket $BUCKET_NAME  \
             --region $AWS_DEFAULT_REGION \
             --acl private \
             --object-lock-enabled-for-bucket \
-            --output yaml
+            --output yaml &&
           aws s3api put-bucket-tagging \
             --bucket $BUCKET_NAME  \
             --region $AWS_DEFAULT_REGION \
             --tagging "TagSet=[{Key=Name,Value=$BUCKET_NAME}]" \
-            --output yaml
+            --output yaml &&
           aws s3api put-bucket-versioning \
             --bucket $BUCKET_NAME  \
             --region $AWS_DEFAULT_REGION \
             --versioning-configuration Status=Enabled \
-            --output yaml
+            --output yaml &&
           aws s3api put-bucket-encryption \
             --bucket $BUCKET_NAME  \
             --region $AWS_DEFAULT_REGION \
