--- a/.github/workflows/setup-s3-bucket-tfstate.yml
+++ b/.github/workflows/setup-s3-bucket-tfstate.yml
@@ -25,7 +25,7 @@ jobs:
       image: amazon/aws-cli:2.0.7
     steps:
     - name: Create bucket
-      run: s3api create-bucket --bucket tfstates-$GITHUB_ACTION --region $AWS_DEFAULT_REGION --acl private --object-lock-enabled-for-bucket --output yaml
+      run: aws s3api create-bucket --bucket tfstates-$GITHUB_ACTION --region $AWS_DEFAULT_REGION --acl private --object-lock-enabled-for-bucket --output yaml
 
     #- name: Bucket tagging
     #  uses: docker://amazon/aws-cli:2.0.7
