--- a/.github/workflows/setup-s3-bucket-tfstate.yml
+++ b/.github/workflows/setup-s3-bucket-tfstate.yml
@@ -7,6 +7,7 @@ env:
   AWS_DEFAULT_REGION: us-east-1
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  GITHUB_JOB: ${{ env.GITHUB_JOB }}
 
 # Controls when the action will run. Workflow runs when manually triggered using the UI
 # or API.
@@ -25,7 +26,7 @@ jobs:
       image: amazon/aws-cli:2.0.7
     steps:
     - name: Create bucket
-      run: aws s3api create-bucket --bucket tfstates-${{ env.GITHUB_JOB }} --region ${{ env.AWS_DEFAULT_REGION }} --acl private --object-lock-enabled-for-bucket --output yaml
+      run: "aws s3api create-bucket --bucket 'tfstates-$GITHUB_JOB' --region ${{ env.AWS_DEFAULT_REGION }} --acl private --object-lock-enabled-for-bucket --output yaml"
 
     #- name: Bucket tagging
     #  uses: docker://amazon/aws-cli:2.0.7
