--- a/.github/workflows/setup-s3-bucket-tfstate.yml
+++ b/.github/workflows/setup-s3-bucket-tfstate.yml
@@ -4,6 +4,7 @@
 name: Setup Bucket TFState
 
 env:
+  BUCKET_NAME: "tfstate-example"
   AWS_DEFAULT_REGION: us-east-1
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -26,7 +27,7 @@ jobs:
     steps:
     - name: Create bucket
       
-      run: 'aws s3api create-bucket --bucket "tfstates_${{ github.job }}" --region ${{ env.AWS_DEFAULT_REGION }} --acl private --object-lock-enabled-for-bucket --output yaml'
+      run: 'aws s3api create-bucket --bucket ${{ env.BUCKET_NAME }} --region ${{ env.AWS_DEFAULT_REGION }} --acl private --object-lock-enabled-for-bucket --output yaml'
 
     #- name: Bucket tagging
     #  uses: docker://amazon/aws-cli:2.0.7
