--- a/.github/workflows/setup-s3-bucket-tfstate.yml
+++ b/.github/workflows/setup-s3-bucket-tfstate.yml
@@ -4,7 +4,7 @@
 name: Setup Bucket TFState
 
 env:
-  BUCKET_NAME: "tfstate-example-update-here"
+  
   AWS_DEFAULT_REGION: us-east-1
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -14,7 +14,11 @@ env:
 on:
   workflow_dispatch:
     # Inputs the workflow accepts.
-    inputs: {}
+    inputs: 
+      bucket_name:
+        description: 'Bucket name of tf state to storage'
+        required: true
+        default: 'tfstate-example-update-here'
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "greet"
@@ -26,15 +30,15 @@ jobs:
       image: amazon/aws-cli:2.0.7
     steps:
     - name: Create bucket
-      run: 'aws s3api create-bucket --bucket ${{ env.BUCKET_NAME }} --region ${{ env.AWS_DEFAULT_REGION }} --acl private --object-lock-enabled-for-bucket --output yaml'
+      run: 'aws s3api create-bucket --bucket ${{ github.event.inputs.bucket_name }} --region ${{ env.AWS_DEFAULT_REGION }} --acl private --object-lock-enabled-for-bucket --output yaml'
 
     - name: Bucket tagging
-      run: 'aws s3api put-bucket-tagging --bucket ${{ env.BUCKET_NAME }} --region ${{ env.AWS_DEFAULT_REGION }} --tagging "TagSet=[{Key=Name,Value=$BUCKET_NAME}]" --output yaml'
+      run: 'aws s3api put-bucket-tagging --bucket ${{ github.event.inputs.bucket_name }} --region ${{ env.AWS_DEFAULT_REGION }} --tagging "TagSet=[{Key=Name,Value=$BUCKET_NAME}]" --output yaml'
           
     - name: Bucket versioning
-      run: 'aws s3api put-bucket-versioning --bucket "tfstates-$GITHUB_ACTION"  --region $AWS_DEFAULT_REGION --versioning-configuration Status=Enabled --output yaml'
+      run: 'aws s3api put-bucket-versioning --bucket ${{ github.event.inputs.bucket_name }}  --region $AWS_DEFAULT_REGION --versioning-configuration Status=Enabled --output yaml'
      
     #- name: Bucket encryption
-    #  run: 'aws s3api put-bucket-encryption --bucket "tfstates-$GITHUB_ACTION"  --region $AWS_DEFAULT_REGION --server-side-encryption-configuration ''{"Rules": [{"ApplyServerSideEncryptionByDefault": {"SSEAlgorithm": "AES256"}}]}'' --output yaml'
+    #  run: 'aws s3api put-bucket-encryption --bucket ${{ github.event.inputs.bucket_name }}  --region $AWS_DEFAULT_REGION --server-side-encryption-configuration ''{"Rules": [{"ApplyServerSideEncryptionByDefault": {"SSEAlgorithm": "AES256"}}]}'' --output yaml'
           
 
