--- a/.github/workflows/setup-s3-bucket-tfstate.yml
+++ b/.github/workflows/setup-s3-bucket-tfstate.yml
@@ -4,7 +4,6 @@
 name: Setup Bucket TFState
 
 env:
-  
   AWS_DEFAULT_REGION: us-east-1
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
@@ -16,7 +15,7 @@ on:
     # Inputs the workflow accepts.
     inputs: 
       bucket_name:
-        description: 'Bucket name of tf state to storage'
+        description: 'Bucket name to storage tf state'
         required: true
         default: 'tfstate-example-update-here'
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
@@ -36,9 +35,9 @@ jobs:
       run: 'aws s3api put-bucket-tagging --bucket ${{ github.event.inputs.bucket_name }} --region ${{ env.AWS_DEFAULT_REGION }} --tagging "TagSet=[{Key=Name,Value=$BUCKET_NAME}]" --output yaml'
           
     - name: Bucket versioning
-      run: 'aws s3api put-bucket-versioning --bucket ${{ github.event.inputs.bucket_name }}  --region $AWS_DEFAULT_REGION --versioning-configuration Status=Enabled --output yaml'
+      run: 'aws s3api put-bucket-versioning --bucket ${{ github.event.inputs.bucket_name }} --region ${{ env.AWS_DEFAULT_REGION }}  --versioning-configuration Status=Enabled --output yaml'
      
-    #- name: Bucket encryption
-    #  run: 'aws s3api put-bucket-encryption --bucket ${{ github.event.inputs.bucket_name }}  --region $AWS_DEFAULT_REGION --server-side-encryption-configuration ''{"Rules": [{"ApplyServerSideEncryptionByDefault": {"SSEAlgorithm": "AES256"}}]}'' --output yaml'
+    - name: Bucket encryption
+      run: 'aws s3api put-bucket-encryption --bucket ${{ github.event.inputs.bucket_name }} --region ${{ env.AWS_DEFAULT_REGION }} --server-side-encryption-configuration ''{"Rules": [{"ApplyServerSideEncryptionByDefault": {"SSEAlgorithm": "AES256"}}]}'' --output yaml'
           
 
