--- a/.github/workflows/01-manual-s3-bucket-tfstate.yml
+++ b/.github/workflows/01-manual-s3-bucket-tfstate.yml
@@ -1,7 +1,7 @@
 
 # This is a basic workflow that is manually triggered
 
-name: Setup Bucket TFState
+name: 01-manual-s3-bucket-tfstate-setup
 
 env:
   AWS_DEFAULT_REGION: us-east-1
