--- a/.github/workflows/03-manual-terraform-apply.yml
+++ b/.github/workflows/03-manual-terraform-apply.yml
@@ -3,6 +3,10 @@
 
 name: 03-manual-terraform-apply
 
+env:
+  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
 # Controls when the action will run. Workflow runs when manually triggered using the UI
 # or API.
 on:
@@ -27,8 +31,6 @@ jobs:
     environment: plan
     env:
       AWS_DEFAULT_REGION: ${{ github.event.inputs.aws_region }}
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
     defaults:
       run:
@@ -54,6 +56,8 @@ jobs:
     name: 'Terraform Apply'
     runs-on: ubuntu-latest
     environment: apply
+    env:
+      AWS_DEFAULT_REGION: ${{ github.event.inputs.aws_region }}
     needs: terraform-plan
     # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
     defaults:
