--- a/.github/workflows/01-manual-s3-bucket-tfstate.yml
+++ b/.github/workflows/01-manual-s3-bucket-tfstate.yml
@@ -7,17 +7,14 @@ env:
   AWS_DEFAULT_REGION: us-east-1
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  TF_STATE_BUCKET_NAME : ${{ secrets.TF_STATE_BUCKET_NAME }}
 
 # Controls when the action will run. Workflow runs when manually triggered using the UI
 # or API.
 on:
   workflow_dispatch:
     # Inputs the workflow accepts.
-    inputs: 
-      bucket_name:
-        description: 'Bucket name to storage tf state'
-        required: true
-        default: 'tfstate-example-update-here'
+    inputs: {}
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "greet"
@@ -29,15 +26,15 @@ jobs:
       image: amazon/aws-cli:2.0.7
     steps:
     - name: Create bucket
-      run: 'aws s3api create-bucket --bucket ${{ github.event.inputs.bucket_name }} --region ${{ env.AWS_DEFAULT_REGION }} --acl private --object-lock-enabled-for-bucket --output yaml'
+      run: 'aws s3api create-bucket --bucket ${{ env.TF_STATE_BUCKET_NAME }} --region ${{ env.AWS_DEFAULT_REGION }} --acl private --object-lock-enabled-for-bucket --output yaml'
 
     - name: Bucket tagging
-      run: 'aws s3api put-bucket-tagging --bucket ${{ github.event.inputs.bucket_name }} --region ${{ env.AWS_DEFAULT_REGION }} --tagging "TagSet=[{Key=Name,Value=${{ github.event.inputs.bucket_name }}}]" --output yaml'
+      run: 'aws s3api put-bucket-tagging --bucket ${{ env.TF_STATE_BUCKET_NAME }} --region ${{ env.AWS_DEFAULT_REGION }} --tagging "TagSet=[{Key=Name,Value=${{ env.TF_STATE_BUCKET_NAME }}}]" --output yaml'
           
     - name: Bucket versioning
-      run: 'aws s3api put-bucket-versioning --bucket ${{ github.event.inputs.bucket_name }} --region ${{ env.AWS_DEFAULT_REGION }}  --versioning-configuration Status=Enabled --output yaml'
+      run: 'aws s3api put-bucket-versioning --bucket ${{ env.TF_STATE_BUCKET_NAME }} --region ${{ env.AWS_DEFAULT_REGION }}  --versioning-configuration Status=Enabled --output yaml'
      
     - name: Bucket encryption
-      run: 'aws s3api put-bucket-encryption --bucket ${{ github.event.inputs.bucket_name }} --region ${{ env.AWS_DEFAULT_REGION }} --server-side-encryption-configuration ''{"Rules": [{"ApplyServerSideEncryptionByDefault": {"SSEAlgorithm": "AES256"}}]}'' --output yaml'
+      run: 'aws s3api put-bucket-encryption --bucket ${{ env.TF_STATE_BUCKET_NAME }} --region ${{ env.AWS_DEFAULT_REGION }} --server-side-encryption-configuration ''{"Rules": [{"ApplyServerSideEncryptionByDefault": {"SSEAlgorithm": "AES256"}}]}'' --output yaml'
           
 
