--- a/.github/workflows/02-manual-terraform-plan.yml
+++ b/.github/workflows/02-manual-terraform-plan.yml
@@ -19,6 +19,11 @@ on:
         default: 'us-east-1'
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 
+env:
+  AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  TF_STATE_BUCKET_NAME : ${{ secrets.TF_STATE_BUCKET_NAME }}
+
 jobs:
 
   terraform-plan:
@@ -27,8 +32,6 @@ jobs:
     environment: plan
     env:
       AWS_DEFAULT_REGION: ${{ github.event.inputs.aws_region }}
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
     defaults:
       run:
@@ -39,7 +42,7 @@ jobs:
       uses: actions/checkout@v2
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
-      run: terraform init
+      run: terraform init -backend-config="bucket=${{ env.TF_STATE_BUCKET_NAME }}"
       working-directory: ./iac
     # Checks that all Terraform configuration files adhere to a canonical format
     - name: Terraform Format
