--- a/.github/workflows/03-manual-terraform-apply.yml
+++ b/.github/workflows/03-manual-terraform-apply.yml
@@ -6,6 +6,7 @@ name: 03-manual-terraform-apply
 env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  TF_STATE_BUCKET_NAME : ${{ secrets.TF_STATE_BUCKET_NAME }}
 
 # Controls when the action will run. Workflow runs when manually triggered using the UI
 # or API.
@@ -41,7 +42,7 @@ jobs:
       uses: actions/checkout@v2
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
-      run: terraform init
+      run: terraform init -backend-config="bucket=${{ env.TF_STATE_BUCKET_NAME }}"
       working-directory: ./iac
     # Checks that all Terraform configuration files adhere to a canonical format
     - name: Terraform Format
@@ -69,7 +70,7 @@ jobs:
       uses: actions/checkout@v2
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
-      run: terraform init
+      run: terraform init -backend-config="bucket=${{ env.TF_STATE_BUCKET_NAME }}"
       working-directory: ./iac
 
     - name: Terraform Apply
